add tag usage in book detail.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
-# Common requirements
-Django
+# Sorted by alphabet letters
+celery
+django
+django-celery-beat
+django-celery-results
+django-cors-headers
+django-debug-toolbar
+django-environ
+django-extensions
+django-jazzmin
+django-ratelimit
+django-redis
+django-storages
+django-taggit
 djangorestframework
+djangorestframework-simplejwt
 djoser
+drf-material
+drf-nested-routers
+drf-spectacular
+drf-spectacular-sidecar
+drf_social_oauth2
+firebase-admin
+flower
+icecream
+pdfplumber
 pillow
 psycopg2-binary
-django-environ
-django-debug-toolbar
-drf-spectacular
-drf-material
-django-redis
-django-taggit
-djangorestframework-simplejwt
-django-ratelimit
-drf-spectacular-sidecar
-icecream
-celery
-drf_social_oauth2
-django-cors-headers
-django-jazzmin
-django-extensions
-firebase-admin
-django-storages
 watchdog
-django-celery-results
-flower
-django-celery-beat
-drf-nested-routers
-pdfplumber
